# AI_QATesting_Agent

./: .gitignore  AGENTS.md  PRD2.md  README.md  ai-qa-before-commit-split.patch  ai-qa-working-tree-status.txt  pyproject.toml  requirements.txt
.reference/AI_QATesting_Agent_phase1/: BUILD_NOTES.md  README.md  pyproject.toml  requirements.txt
.reference/AI_QATesting_Agent_phase1/dashboard/: streamlit_app.py
.reference/AI_QATesting_Agent_phase1/docs/: PRODUCT_SCOPE.md  SECURITY_BOUNDARIES.md  TEST_PROFILES.md
.reference/AI_QATesting_Agent_phase1/examples/: demo_api.json  demo_failure.json  demo_repository.json  demo_smoke.json
.reference/AI_QATesting_Agent_phase1/executor/: api_runner.py  ui_runner.py
.reference/AI_QATesting_Agent_phase1/human_review/: email_sender.py  review_queue.py
.reference/AI_QATesting_Agent_phase1/qa_agent/: __init__.py  cli.py  config.py  generator.py  models.py  pipeline.py  planner.py  security.py
.reference/AI_QATesting_Agent_phase1/reports/: report_builder.py
.reference/AI_QATesting_Agent_phase1/tests/: test_cli.py  test_config.py  test_pipeline.py  test_planner.py  test_review.py  test_security.py
agents/: __init__.py  failure_analyzer.py  report_summarizer.py  test_generator.py
dashboard/: streamlit_app.py
docs/: PRODUCT_SCOPE.md
email/: email_sender.py
examples/: example_site.json
executor/: __init__.py  api_runner.py  selenium_runner.py
human_review/: __init__.py  approval_api.py  review_queue.py
qa_agent/: __init__.py  cli.py  email_loader.py  json_utils.py  logging_utils.py  models.py  pipeline.py  (+1 more)
(+12 files in other folders)
