[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-qa-testing-agent"
version = "0.1.0"
description = "Local selective QA orchestration with human-reviewed reports"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit>=1.35"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
python_classes = ["*Tests"]
markers = [
  "smoke: critical release checks",
  "unit: isolated code tests",
  "api: API checks",
  "integration: service integration checks",
  "e2e: browser workflow checks",
  "regression: broader regression checks",
]
